front end changes

--- a/Code/web-application-feature-mflex_new/src/ng/src/index.html
+++ b/Code/web-application-feature-mflex_new/src/ng/src/index.html
@@ -1,14 +1,23 @@
 <!doctype html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon"/>
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src 'self' https://mfsbaastest.grameenphone.com;"> -->
+    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
+    <!-- index.html -->
+    
+    
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval';">
+    <meta http-equiv="Content-Security-Policy" content="connect-src 'self' https://mfsbaastest.grameenphone.com/;"> -->
     <title>GPAY Corporate Bulk Bill Pay</title>
     <script>
         var global = window; // fix global is undefined in sockjs-client
     </script>
 </head>
+
 <body class="app"></body>
+
 </html>
